--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,10 @@
 		"build": "vue-cli-service build"
 	},
 	"dependencies": {
+		"@element-plus/icons-vue": "^2.3.1",
 		"bootstrap": "^5.3.2",
-		"element-plus": "^2.4.2",
-		"vue": "^3.2.13",
+		"element-plus": "^2.4.3",
+		"vue": "^3.2.36",
 		"vue-router": "^4.0.3",
 		"vuex": "^4.0.0"
 	},
