--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.3.1",
 		"bootstrap": "^5.3.2",
+		"bootstrap-icons": "^1.11.2",
 		"element-plus": "^2.4.3",
 		"vue": "^3.2.36",
 		"vue-router": "^4.0.3",
